--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,9 +19,29 @@
 }
 
 .text_hover{
-    @apply hover:text-[#035f78] transition-colors duration-300
+    @apply hover:text-[#035f78] transition-colors duration-300 cursor-pointer
 }
 
 /* select{
     appearance: none;
 } */
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 5px; 
+  background-color: #000;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #035f78;
+  border-radius: 6px; 
+  border: 3px solid #000;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #067b9c; 
+}
+
+::-webkit-scrollbar-track {
+  background-color: #000;
+}
