--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,11 +7,11 @@
 }
 
 .card {
-    @apply border-1 border-[#035f78] bg-black/40 backdrop-blur-2xl rounded-lg
+    @apply border-1 border-[#0091b9] bg-black/40 backdrop-blur-2xl rounded-lg
 }
 
 .card2 {
-    @apply border-1 border-[#035f78] bg-black/10 backdrop-blur-2xl rounded-lg
+    @apply border-1 border-[#0091b9] bg-black/10 backdrop-blur-2xl rounded-lg
 }
 
 .input_form{
@@ -19,11 +19,11 @@
 }
 
 .text_hover{
-    @apply hover:text-[#035f78] transition-colors duration-300 cursor-pointer
+    @apply hover:text-[#0091b9] transition-colors duration-300 cursor-pointer
 }
 
 .buttonIcon{
-  @apply flex justify-center items-center border-1 border-[#035f78] text-[#035f78] bg-black/10 backdrop-blur-2xl rounded-lg p-2 cursor-pointer
+  @apply flex justify-center items-center border-1 border-[#0091b9] text-[#0091b9] bg-black/10 backdrop-blur-2xl rounded-lg p-2 cursor-pointer
 }
 
 section{
@@ -41,13 +41,13 @@ section{
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #035f78;
+  background-color: #0091b9;
   border-radius: 6px; 
   border: 3px solid #000;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #067b9c; 
+  background-color: #0091b9; 
 }
 
 ::-webkit-scrollbar-track {
