--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,15 +7,15 @@
 }
 
 .card {
-    @apply border-1 border-[#0091b9] bg-black/40 backdrop-blur-2xl rounded-lg
+    @apply border-1 border-[#0091b9] bg-[#0091b9]/3 rounded-lg
 }
 
 .card2 {
-    @apply border-1 border-[#0091b9] bg-black/10 backdrop-blur-2xl rounded-lg
+    @apply border-1 border-[#0091b9] bg-[#0091b9]/3 backdrop-blur-2xl rounded-2xl
 }
 
 .input_form{
-    @apply bg-black/10 px-2 py-1.5 backdrop-blur-2xl rounded-md border-1 border-[#035f78]
+    @apply bg-[#0091b9]/3 px-2 py-1.5 backdrop-blur-2xl rounded-md border-1 border-[#0091b9]
 }
 
 .text_hover{
