--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,7 +23,7 @@
 }
 
 .buttonIcon{
-  @apply flex justify-center items-center border-1 border-[#0091b9] text-[#0091b9] bg-black/10 backdrop-blur-2xl rounded-lg p-2 cursor-pointer
+  @apply flex justify-center items-center border-1 border-[#0091b9] text-[#0091b9] bg-[#0091b9]/5 hover:bg-[#0091b9]/10 backdrop-blur-2xl rounded-lg p-2 cursor-pointer transition-all duration-300 hover:-translate-y-0.5
 }
 
 section{
